:sparkles: Done api change password & refactor code
Done api change password & refactor code
